Make the 7.1 branch a limited maintenance branch like 6.6